# OTUS_13

./: CMakeLists.txt  README.md
.github/workflows/: release_ubuntu.yml
msvc/: OTUS_13.sln  homework_13.vcxproj  homework_13.vcxproj.filters
src/: AccuracyFinder.cpp  AccuracyFinder.h  classifier.h  helpers.cpp  helpers.h  main.cpp  mlp_classifier.cpp  mlp_classifier.h
